[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ygt"
version = "0.2.3"
authors = [
    { name="Peter S. Baker", email="b.tarde@mail.com" },
]
description = "A graphical hint editor for TrueType fonts"
readme = "README.md"
requires-python = ">=3.10.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyQt6 >= 6.4.0",
    "fonttools >= 4.38.0",
    "freetype-py >= 2.3.0",
    "defcon >= 0.10.1",
    "xgridfit >= 3.3.0",
    "setuptools >= 65.3.0",
    "PyYAML >= 6.0",
    "schema >= 0.7.5",
    "fs >= 2.4.15",
    "ufo2ft >= 2.28.0",
    "numpy >= 1.22.4",
    "uharfbuzz >= 0.25.0",
]

[project.scripts]
    ygt = "ygt.window:main"
